--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,20 @@
 <resources>
-    <string name="app_name">News App - Technology</string>
-    <string name="guardian_api_technology">https://content.guardianapis.com/us/technology?api-key=5c6967d0-8f11-4149-9be3-da62691130c1&amp;show-tags=contributor</string>
+    <string name="app_name">MTA Bus Time</string>
+
+    <!--<string name="guardian_api_technology">https://content.guardianapis.com/us/technology?api-key=5c6967d0-8f11-4149-9be3-da62691130c1&amp;show-tags=contributor</string>-->
+    <!---->
+    <!--<string name = "guardian_api_technology">http://bustime.mta.info/api/siri/stop-monitoring.json?key=5357f1c2-4267-4529-bf57-7c1d411f7399&amp;MonitoringRef=307957</string>-->
+    <!---->
+
+    <string name="guardian_api_technology">http://bustime.mta.info/api/siri/stop-monitoring.json?key=5357f1c2-4267-4529-bf57-7c1d411f7399&amp;MonitoringRef=</string>
+
+
     <string name="json_response">response</string>
     <string name="json_results">results</string>
     <string name="json_web_title">webTitle</string>
     <string name="json_web_url">webUrl</string>
     <string name="json_web_publication_date">webPublicationDate</string>
-    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
+    <!--<string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>-->
     <string name="json_contributor">contributor</string>
     <string name="json_type">type</string>
     <string name="json_tags">tags</string>
